--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git://github.com/18F/glossary.git"
   },
   "scripts": {
-    "start": "parcel example/index.html",
+    "start": "parcel  example/index.html",
     "test": "mochify tests/glossary.js"
   },
   "dependencies": {
@@ -23,8 +23,10 @@
   "main": "src/glossary.js",
   "devDependencies": {
     "chai": "^4.2.0",
+    "cssnano": "^5.0.16",
     "mocha": "^6.1.4",
-    "mochify": "^6.2.0"
+    "mochify": "^6.2.0",
+    "postcss": "^8.4.5"
   },
   "bugs": {
     "url": "https://github.com/18f/glossary/issues"
