--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "cssnano": "^5.0.16",
     "mocha": "^6.1.4",
     "mochify": "^6.2.0",
-    "postcss": "^8.4.5"
+    "postcss": "^8.4.5",
+    "parcel-bundler": "^1.12.5"
+
   },
   "bugs": {
     "url": "https://github.com/18f/glossary/issues"
